--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     ext {
         versions = [
                 gradle : '4.10.2',
-                kotlin : '1.3.0',
+                kotlin : '1.3.50',
                 code   : 1,
                 name   : '1.0.0',
                 sdk    : [
@@ -38,7 +38,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.6.0-alpha11'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
