--- a/build.gradle
+++ b/build.gradle
@@ -19,13 +19,13 @@ buildscript {
                 ],
                 android: [
                         buildTools: '28.0.3',
-                        appcompat   : '1.0.1',
-                        annotation   : '1.0.0',
+                        appcompat   : '1.1.0',
+                        annotation   : '1.1.0',
                         exifinterface : '1.0.0'
                 ],
                 rx     : [
                         rxJava1: '1.3.8',
-                        rxJava2: '2.2.3'
+                        rxJava2: '2.2.12'
                 ],
                 test   : [
                         junit  : '4.12',
@@ -38,7 +38,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-alpha11'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
@@ -57,6 +57,3 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = versions.gradle
-}
