--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,6 @@ subprojects {
 buildscript {
     ext {
         versions = [
-                gradle : '4.10.2',
-                kotlin : '1.3.50',
                 code   : 1,
                 name   : '1.0.0',
                 sdk    : [
@@ -18,7 +16,7 @@ buildscript {
                         target : 28
                 ],
                 android: [
-                        buildTools: '28.0.3',
+                        buildTools: '30.0.2',
                         appcompat   : '1.1.0',
                         annotation   : '1.1.0',
                         exifinterface : '1.0.0'
@@ -35,21 +33,14 @@ buildscript {
     }
     repositories {
         google()
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0-alpha11'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
-
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        mavenCentral()
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
