--- a/fotoapparat/build.gradle
+++ b/fotoapparat/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.github.dcendents.android-maven'
+apply plugin: 'maven-publish'
 apply plugin: 'kotlin-android'
 
 group = 'io.fotoapparat'
 
 android {
-    buildToolsVersion versions.android.buildTools
     compileSdkVersion versions.sdk.target
 
     defaultConfig {
