--- a/fotoapparat/build.gradle
+++ b/fotoapparat/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'kotlin-android'
 group = 'io.fotoapparat'
 
 android {
+    namespace = "io.fotoapparat"
     compileSdkVersion versions.sdk.target
 
     defaultConfig {
@@ -22,8 +23,8 @@ android {
         unitTests.returnDefaultValues = true
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
